# 23 march 2019

libui_sources += [
	'common/attribute.c',
	'common/attrlist.c',
	'common/attrstr.c',
	'common/areaevents.c',
	'common/control.c',
	'common/debug.c',
	'common/matrix.c',
	'common/opentype.c',
	'common/shouldquit.c',
	'common/tablemodel.c',
	'common/tablevalue.c',
	'common/userbugs.c',
	'common/utf.c',
]
